--- a/mnode/fpga/ap064.qsf
+++ b/mnode/fpga/ap064.qsf
@@ -577,4 +577,8 @@ set_global_assignment -name VERILOG_FILE ip/edge_detect/altera_edge_detector.v
 set_global_assignment -name VERILOG_FILE ip/debounce/debounce.v
 set_global_assignment -name QIP_FILE ip/altsource_probe/hps_reset.qip
 set_global_assignment -name QIP_FILE top_qsys/synthesis/top_qsys.qip
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to NIOS_UART0_RXD
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to NIOS_UART0_TXD
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to NIOS_UART1_RXD
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to NIOS_UART1_TXD
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
