update uart loop with potential json extraction capability

--- a/mnode/fpga/.vscode/settings.json
+++ b/mnode/fpga/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "seg7.h": "c",
-        "altera_avalon_pio_regs.h": "c"
+        "altera_avalon_pio_regs.h": "c",
+        "stdio.h": "c",
+        "stdbool.h": "c"
     }
 }
